[project]
name = "tgl"
version = "0.1.0"
description = "Library for managing of TGL format data"
authors = [
    {name = "keyhan"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"

dependencies = [
    "pytest" 
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/keyhan-tiny112/keyhan-tiny112"
Repository = "https://github.com/keyhan-tiny112/tgl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tgl = ["py.typed"]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
